--- a/aquatics-notebook.qmd
+++ b/aquatics-notebook.qmd
@@ -8,7 +8,9 @@ library(tidyverse)
 ```
 
 ```{r}
-s3 <- arrow::s3_bucket("neon4cast-forecasts/parquet/aquatics/model_id=flareGLM/reference_datetime=2023-02-24", endpoint_override = "data.ecoforecast.org", anonymous = TRUE)
+s3 <- arrow::s3_bucket("neon4cast-forecasts/parquet/aquatics/model_id=flareGLM/reference_datetime=2023-02-24", 
+                       endpoint_override = "data.ecoforecast.org",
+                       anonymous = TRUE)
 
 d <- arrow::open_dataset(s3) |> collect()
 ```
