--- a/aquatics-catalog.qmd
+++ b/aquatics-catalog.qmd
@@ -1,6 +1,38 @@
 ---
-title: "NEON aquatics forecasts"
+title: "Aquatics"
 editor: visual
 ---
 
-Description of dataset derived from JSON STAC files goes here
+Description of dataset
+
+::: panel-tabset
+## Details
+
+```{r eval=FALSE}
+jsonlite::read_json("https://raw.githubusercontent.com/addelany/stac4cast/main/output.json")
+```
+
+## Notebook
+
+```{r echo=FALSE, message = FALSE}
+library(tidyverse)
+```
+
+```{r}
+s3 <- arrow::s3_bucket("neon4cast-forecasts/parquet/aquatics/model_id=flareGLM/reference_datetime=2023-02-24", 
+                       endpoint_override = "data.ecoforecast.org",
+                       anonymous = TRUE)
+
+d <- arrow::open_dataset(s3) |> collect()
+```
+
+```{r}
+d |> 
+  filter(site_id == "BARC",
+         variable == "temperature") |> 
+  ggplot(aes(x = datetime, y = prediction, group = parameter)) +
+  geom_line()
+
+```
+
+:::
