--- a/aquatics-catalog.qmd
+++ b/aquatics-catalog.qmd
@@ -14,6 +14,9 @@ jsonlite::read_json("https://raw.githubusercontent.com/addelany/stac4cast/main/o
 
 ## Notebook
 
+[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/eco4cast/neon4cast-catalog/HEAD?urlpath=rstudio)
+
+
 ```{r echo=FALSE, message = FALSE}
 library(tidyverse)
 ```
