update aquatic qmd and output file location

--- a/aquatics-catalog.qmd
+++ b/aquatics-catalog.qmd
@@ -4,7 +4,9 @@ editor: visual
 ---
 
 ```{r message=FALSE}
-library(reactable)
+#library(reactable)
+library(knitr)
+
 ```
 
 Description of dataset
@@ -15,8 +17,8 @@ Description of dataset
 ```{r eval=TRUE, echo=FALSE}
 home_dir <- '/home/rstudio/neon4cast-catalog'#here::here()
 setwd(home_dir)
-collection <- jsonlite::read_json("https://github.com/addelany/neon4cast-catalog/raw/main/output.json")
-#collection <- jsonlite::read_json("output.json")
+#collection <- jsonlite::read_json("https://github.com/addelany/neon4cast-catalog/raw/main/output.json")
+collection <- jsonlite::read_json("https://github.com/addelany/neon4cast-catalog/raw/main/stac/v1/collection/aquatics/output.json")
 
 ```
 
@@ -33,9 +35,8 @@ Temporal Extent: `r collection$extent$temporal$interval`
 STAC extensions:
 `r collection$stac_extensions`
 
-```{r}
+```{r eval=TRUE, echo=FALSE}
 ## STAC Extensions table
-library(knitr)
 
 extensions <- c()
 
@@ -47,7 +48,7 @@ extension_df <- data.frame(extensions)
 ```
 
 ```{r}
-knitr::kable(extension_df)
+knitr::kable(extension_df, col.names = 'STAC Extensions')
 ```
 
 Publication:
@@ -65,27 +66,27 @@ for (i in seq.int(1, length(collection$publications))){
 pub_df <- data.frame(pub_doi,
                     pub_cite)
 
-pub_table <- reactable::reactable(pub_df,
-                           defaultColDef = colDef(
-                             align = "left"),
-                           columns = list(pub_doi = colDef(name='DOI'),
-                                          pub_cite = colDef(name='Citation')),
-                           defaultPageSize = 10,
-                           filterable = FALSE,
-                           highlight = TRUE)
+# pub_table <- reactable::reactable(pub_df,
+#                            defaultColDef = colDef(
+#                              align = "left"),
+#                            columns = list(pub_doi = colDef(name='DOI'),
+#                                           pub_cite = colDef(name='Citation')),
+#                            defaultPageSize = 10,
+#                            filterable = FALSE,
+#                            highlight = TRUE)
 ```
 
 ```{r}
 #call publication table 
-pub_table
+knitr::kable(pub_df, col.names = c('DOI','Citation'))
 ```
 
 Providers:
 ```{r eval=TRUE, echo=FALSE}
+#not sure if we need to print any of this -- may just be saved as metadata
 for (i in seq.int(1, length(collection$providers))){
-  print(i)
   provider_info <- c(collection$providers[[i]]$name, collection$providers[[i]]$url, c(unlist(collection$providers[[i]]$roles)))
-  print(provider_info)
+  #print(provider_info)
 }
 ```
 
@@ -96,7 +97,6 @@ STAC version: `r collection$stac_version`
 Columns
 ```{r eval=TRUE, echo=FALSE}
 ## COLUMNS
-collection$table_columns
 
 tc_name <- c()
 tc_type <- c()
@@ -112,20 +112,64 @@ tc_df <- data.frame(tc_name,
                     tc_description,
                     tc_type)
 
-columns_table <- reactable(tc_df,
-                         defaultColDef = colDef(
-                           align = "left"),
-                         columns = list(tc_name = colDef(name='Name'),
-                                        tc_description = colDef(name='Description'),
-                                        tc_type = colDef(name = 'Type')),
-                         defaultPageSize = 10,
-                         filterable = FALSE,
-                         highlight = TRUE)
+# columns_table <- reactable(tc_df,
+#                          defaultColDef = colDef(
+#                            align = "left"),
+#                          columns = list(tc_name = colDef(name='Name'),
+#                                         tc_description = colDef(name='Description'),
+#                                         tc_type = colDef(name = 'Type')),
+#                          defaultPageSize = 10,
+#                          filterable = FALSE,
+#                          highlight = TRUE)
 ```
 
 ```{r}
 # call columns_table 
-columns_table
+knitr::kable(tc_df, col.names = c('Name','Description','Type'))
+```
+
+
+Assets
+The data contain the following assets:
+```{r eval=TRUE,echo=FALSE}
+## assets
+
+asset_title <- c()
+asset_href <- c()
+asset_type <- c()
+asset_roles <- c()
+asset_description <- c()
+
+for (i in seq.int(1,length(list(collection$assets$parquet_items)))){ ## this needs to be converted to list before this step (do in build_collection)
+  asset_title[i] <- list(collection$assets$parquet_items)[[i]]$title
+  asset_href[i] <- list(collection$assets$parquet_items)[[i]]$href
+  asset_type[i] <- list(collection$assets$parquet_items)[[i]]$type
+  asset_roles[i] <- list(collection$assets$parquet_items)[[i]]$roles[[1]]
+  asset_description[i] <- list(collection$assets$parquet_items)[[i]]$description
+
+}
+
+asset_df <- data.frame(asset_title,
+                       asset_href,
+                       asset_type,
+                       asset_roles,
+                       asset_description)
+
+# asset_table <- reactable(asset_df,
+#                       defaultColDef = colDef(
+#                         align = "left"),
+#                       columns = list(asset_title = colDef(name='Title'),
+#                                      asset_href = colDef(name='Href'),
+#                                      asset_type = colDef(name = 'Type'),
+#                                      asset_roles = colDef(name = 'Roles'),
+#                                      asset_description = colDef(name = 'description')),
+#                       defaultPageSize = 10,
+#                       filterable = FALSE,
+#                       highlight = TRUE)
+```
+
+```{r}
+knitr::kable(asset_table)
 ```
 
 ## Notebook
@@ -153,47 +197,4 @@ d |>
 
 ```
 
-
-Assets
-The data contain the following assets:
-```{r}
-## assets
-
-asset_title <- c()
-asset_href <- c()
-asset_type <- c()
-asset_roles <- c()
-asset_description <- c()
-
-for (i in seq.int(1,length(list(collection$assets$parquet_items)))){ ## this needs to be converted to list before this step (do in build_collection)
-  asset_title[i] <- list(collection$assets$parquet_items)[[i]]$title
-  asset_href[i] <- list(collection$assets$parquet_items)[[i]]$href
-  asset_type[i] <- list(collection$assets$parquet_items)[[i]]$type
-  asset_roles[i] <- list(collection$assets$parquet_items)[[i]]$roles[[1]]
-  asset_description[i] <- list(collection$assets$parquet_items)[[i]]$description
-
-}
-
-asset_df <- data.frame(asset_title,
-                       asset_href,
-                       asset_type,
-                       asset_roles,
-                       asset_description)
-
-asset_table <- reactable(asset_df,
-                      defaultColDef = colDef(
-                        align = "left"),
-                      columns = list(asset_title = colDef(name='Title'),
-                                     asset_href = colDef(name='Href'),
-                                     asset_type = colDef(name = 'Type'),
-                                     asset_roles = colDef(name = 'Roles'),
-                                     asset_description = colDef(name = 'description')),
-                      defaultPageSize = 10,
-                      filterable = FALSE,
-                      highlight = TRUE)
-```
-
-```{r}
-asset_table
-```
 :::
