--- a/stac/aquatics/scores/asset-description.Rmd
+++ b/stac/aquatics/scores/asset-description.Rmd
@@ -1,4 +1,4 @@
-Use `arrow` for remote access to the database.
+Use `arrow` for remote access to the database. This will return all scored forecasts for the NEON Ecological Forecasting Aquatics theme.
 
 ### R
 
@@ -6,9 +6,10 @@ Use `arrow` for remote access to the database.
 # Copy URL from "URL for Amazon S3" button above and save as object named "url_for_s3" 
 # Use in code below
 
-scores <- arrow::open_dataset(url_for_s3)
-df <- scores |> dplyr::collect()
+all_scores <- arrow::open_dataset(url_for_s3)
+df <- all_scores |> dplyr::collect()
 
 ```
 
 Now use dplyr operations to summarise or subset (if necessary), followed by `dplyr::collect()` to bring this data into R as a `data.frame`.
+
